Update everything.